주문페이지 준비 시작2

--- a/src/main/resources/templates/layouts/order.html
+++ b/src/main/resources/templates/layouts/order.html
@@ -68,16 +68,16 @@
                                         <span class="top__text">Product</span>
                                         <span class="top__text__right">Total</span>
                                     </li>
-                                    <li>01. Chain buck bag <span>$ 300.0</span></li>
-                                    <li>02. Zip-pockets pebbled<br /> tote briefcase <span>$ 170.0</span></li>
-                                    <li>03. Black jean <span>$ 170.0</span></li>
-                                    <li>04. Cotton shirt <span>$ 110.0</span></li>
+                                    <li>01. bag <span>$ 0</span></li>
+                                    <li>02. Jarket<br /> tote briefcase <span>$ 0</span></li>
+                                    <li>03. jean <span>$ 0</span></li>
+                                    <li>04. shirt <span>$ 0</span></li>
                                 </ul>
                             </div>
                             <div class="checkout__order__total">
                                 <ul>
-                                    <li>Subtotal <span>$ 750.0</span></li>
-                                    <li>Total <span>$ 750.0</span></li>
+                                    <li>Subtotal <span>$ 0</span></li>
+                                    <li>Total <span>$ 0</span></li>
                                 </ul>
                             </div>
                             <div class="checkout__order__widget">
